add_executable(txt2gam_app src/main.c)
set_target_properties(txt2gam_app PROPERTIES OUTPUT_NAME txt2gam)
target_include_directories(txt2gam_app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_compile_options(txt2gam_app PRIVATE ${PROJECT_COMPILER_FLAGS})
target_link_options(txt2gam_app PRIVATE ${PROJECT_LINKER_FLAGS})
target_link_libraries(txt2gam_app PRIVATE txt2gam_default)

if (WIN32)
	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT txt2gam_app)
endif()

# Installation

if (WIN32)
	set(BINDIR ${CMAKE_INSTALL_BINDIR})
	set(LIBDIR ${CMAKE_INSTALL_LIBDIR})
	set(RLIBDIR ${CMAKE_INSTALL_BINDIR})
	set(INSTALL_RPATH "")
elseif (APPLE)
	set(BINDIR ${CMAKE_INSTALL_BINDIR})
	set(LIBDIR ${CMAKE_INSTALL_LIBDIR})
	set(RLIBDIR ${CMAKE_INSTALL_LIBDIR})
	set(INSTALL_RPATH "@loader_path;@loader_path/../${CMAKE_INSTALL_LIBDIR}")
elseif (UNIX)
	set(BINDIR ${CMAKE_INSTALL_BINDIR})
	set(LIBDIR ${CMAKE_INSTALL_LIBDIR})
	set(RLIBDIR ${CMAKE_INSTALL_LIBDIR})
	set(INSTALL_RPATH "$ORIGIN;$ORIGIN/../${CMAKE_INSTALL_LIBDIR}")
else()
	message(FATAL_ERROR "Platform is not supported")
endif()

set_target_properties(txt2gam txt2gam_default txt2gam_app PROPERTIES INSTALL_RPATH "${INSTALL_RPATH}")
install(TARGETS txt2gam txt2gam_default txt2gam_app
	RUNTIME DESTINATION ${BINDIR}
	LIBRARY DESTINATION ${RLIBDIR}
	ARCHIVE DESTINATION ${LIBDIR})

# Packaging

if (WIN32)
	set(CPACK_PACKAGE_NAME "TXT2GAM")
else()
	set(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
endif()
set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CMAKE_PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "TXT2GAM tool to convert text files to QSP game files and vice versa")
set(CPACK_PACKAGE_VENDOR "QSP Foundation")
set(CPACK_PACKAGE_CONTACT "byte@qsp.org")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")

set(CPACK_VERBATIM_VARIABLES ON)
set(CPACK_STRIP_FILES ON)
set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
	OWNER_READ OWNER_WRITE OWNER_EXECUTE
	GROUP_READ GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE
)
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)

set(CPACK_PACKAGE_EXECUTABLES txt2gam "TXT2GAM")
set(CPACK_CREATE_DESKTOP_LINKS txt2gam)
set(CPACK_NSIS_INSTALLED_ICON_NAME "${BINDIR}\\txt2gam.exe")
set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
set(CPACK_NSIS_MODIFY_PATH ON)
set(CPACK_NSIS_MANIFEST_DPI_AWARE ON)
set(CPACK_DMG_DISABLE_APPLICATIONS_SYMLINK ON)

set(CPACK_COMPONENTS_GROUPING ALL_COMPONENTS_IN_ONE)
set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)

include(CPack)
